--- a/budget_project/requirements.txt
+++ b/budget_project/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.10.0
-Django==3.2.16
+crispy-bootstrap5==2025.6
+Django==5.2.7
+django-crispy-forms==2.4
 psycopg2-binary==2.9.11
 python-decouple==3.8
 pytz==2025.2
 sqlparse==0.5.3
 typing_extensions==4.15.0
+tzdata==2025.2
